A new route was created for PUT

--- a/static/index.html
+++ b/static/index.html
@@ -50,7 +50,7 @@
         <div
             style="display: flex; width: 553px; align-items: center; justify-content: center; background-color: #d6dbdf; padding: 20px; border-radius: 10px;">
             <label for="">Número del empleado: </label>
-            <input class="clear-input" style="width: 7rem;" type="number" id="num_employee" name="num_employee" min="0" max="9999">
+            <input class="clear-input" style="width: 7rem;" type="text" id="num_employee" name="num_employee" min="0" max="9999">
             <button style="margin-top: 5px;" class="btn btn-outline-primary" id="submitButtonSelect">Enviar a</button>
         </div>
 
@@ -63,7 +63,8 @@
                 <!-- <input type="text" class="btn-register" name="company_employee" id="company_employee" placeholder="Empresa del empleado"> -->
             </div>
             <div id="container-buttton">
-                <button class="btn btn-outline-primary" id="submitButton_register">Registrar</button>
+                <button class="btn btn-outline-primary update-employee" id="submitButton_register">Registrar</button>
+                
             </div> 
         </div>
     </div>
