add button delete

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
     <link rel="stylesheet" href="/static/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Ecobajatours Email's</title>
 </head>
 
@@ -13,7 +14,8 @@
 
     <h1 id="title">Envío Masivo de E-Mails</h1>
     <div class="div-enter-data">
-        <div class="div-enter-data" style="background-color: #d6dbdf; width: 553px; padding: 20px; border-radius: 10px;">
+        <div class="div-enter-data"
+            style="background-color: #d6dbdf; width: 553px; padding: 20px; border-radius: 10px;">
             <form id="dataForm">
                 <input class="input-enter clear-input" type="email" oninput="verificarCorreo()" id="email"
                     placeholder="Ingrese su correo electrónico" />
@@ -50,33 +52,44 @@
         <div
             style="display: flex; width: 553px; align-items: center; justify-content: center; background-color: #d6dbdf; padding: 20px; border-radius: 10px;">
             <label for="">Número del empleado: </label>
-            <input class="clear-input" style="width: 7rem;" type="text" id="num_employee" name="num_employee" min="0" max="9999">
+            <input class="clear-input" style="width: 7rem;" type="text" id="num_employee" name="num_employee" min="0"
+                max="9999">
             <button style="margin-top: 5px;" class="btn btn-outline-primary" id="submitButtonSelect">Enviar a</button>
         </div>
 
         <div class="container-reg">
             <div class="container-register">
-                <input type="text" class="btn-register clear-input" name="num_employee_to_register" id="num_employee_to_register"
-                    placeholder="Número del empleado">
-                <input type="text" class="btn-register clear-input" name="name_employee" id="name_employee" placeholder="Nombre del empleado">
-                <input type="text" class="btn-register clear-input" name="email_employee" id="email_employee" placeholder="Email del empleado">
+                <input type="text" class="btn-register clear-input" name="num_employee_to_register"
+                    id="num_employee_to_register" placeholder="Número del empleado">
+                <input type="text" class="btn-register clear-input" name="name_employee" id="name_employee"
+                    placeholder="Nombre del empleado">
+                <input type="text" class="btn-register clear-input" name="email_employee" id="email_employee"
+                    placeholder="Email del empleado">
                 <!-- <input type="text" class="btn-register" name="company_employee" id="company_employee" placeholder="Empresa del empleado"> -->
             </div>
             <div id="container-buttton">
                 <button class="btn btn-outline-primary update-employee" id="submitButton_register">Registrar</button>
-                
-            </div> 
+
+            </div>
         </div>
     </div>
     <div class="div-button">
         <button class="btn btn-outline-warning" onclick="clearInput()">Limpiar</button>
         <button class="btn btn-outline-success" id="submitButton">Enviar</button>
+
+    </div>
+
+    <div class="list-employee">
+        <ul id="employeeList">
+
+        </ul>
     </div>
     <script src="/static/main.js"></script>
 
     <script>
         // Obtener el año actual
         const currentYear = new Date().getFullYear();
+        const inputName = document.getElementById('name_employee');
 
         // Establecer el límite superior en el campo de entrada
         document.getElementById('year').max = currentYear;
@@ -92,6 +105,12 @@
                 passwordInput.type = 'password'; // Oculta la contraseña
             }
         });
+
+        inputName.addEventListener('input', function() {
+            this.value = this.value.toUpperCase()
+            console.log("Hola como")
+        })
+
 
     </script>
 </body>
