Send email to some employees is what was added in the code

--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="/static/image.ico">
     <title>Ecobajatours Email's</title>
 </head>
 
@@ -17,7 +18,7 @@
         <div class="div-enter-data"
             style="background-color: #d6dbdf; width: 553px; padding: 20px; border-radius: 10px;">
             <form id="dataForm">
-                <input class="input-enter clear-input" type="email" oninput="verificarCorreo()" id="email"
+                <input class="input-enter clear-input" type="email" id="email"
                     placeholder="Ingrese su correo electrónico" />
                 <input class="input-enter clear-input" type="password" id="pass" name="password" minlength="8" required
                     autocomplete="on" placeholder="Ingrese su contraseña" />
